# employee-oop-practice

./: CMakeLists.txt  ask.txt  main.cpp
Header Files/Business/: ManagerParser.hpp  ParserFactory.hpp  ProductEmployeeParser.hpp
Header Files/Entity/: Integer.hpp  ProductEmployee.hpp
Header Files/UI/: IValueConverter.hpp
Headers/Business/: DailyEmployeeParser.hpp  IParsable.hpp  ManagerParser.hpp
Headers/Entity/: DailyEmployee.hpp  Employee.hpp  Manager.hpp  NumberFormatInfo.hpp  Object.hpp
Headers/UI/: IValueConverter.hpp  IntegerToCurrencyConverter.hpp
Source Files/Business/: DailyEmployeeParser.cpp  ManagerParser.cpp  ProductEmployeeParser.cpp
Source Files/Entity/: DailyEmployee.cpp  Integer.cpp  Manager.cpp  ProductEmployee.cpp
Source Files/UI/: IntegerToCurrencyConverter.cpp
Sources/Business/: DailyEmployeeParser.cpp  ManagerParser.cpp  ProductEmployeeParser.cpp
Sources/Entity/: Employee.cpp  Manager.cpp
Sources/UI/: IntegerToCurrencyConverter.cpp
